/* 
  localization.strings
  phyphox

  Created by Sebastian Kuhlen on 28.05.16.
  Copyright © 2016 RWTH Aachen. All rights reserved.
*/

"apple_ban" = "This experiment is no longer available.";
"app_name" = "phyphox";
"actions" = "Actions";
"action_settings" = "Settings";
"title_activity_experiment" = "phyphox";
"newExperiment" = "Add experiment";
"newExperimentPhyphoxInfo" = "Visit phyphox.org to create more advanced experiments including data analysis and share them with colleagues, students and friends.";
"newExperimentInputTitle" = "Title";
"newExperimentInputBufferSize" = "Buffer size (number of values to be stored)";
"newExperimentInputRate" = "Sensor rate (in Hz, 0 = as fast as possible)";
"newExperimentInputSensors" = "Active sensors";
"warning" = "Warning";
"donotshowagain" = "Do not show again";
"damageWarning" = "Please be careful not to damage your phone while experimenting. Please take special care to avoid dropping it on hard surfaces and do not expose it to excessive magnetic fields. The authors of phyphox are not responsible for any damage to your phone.";
"credits" = "Credits";
"creditsRWTH" = "phyphox has been created at the 2nd Institute of Physics at the RWTH Aachen University.";
"creditsNames" = "Development and Concept:\nDr. Sebastian Staacks\nConcept:\nProf. Christoph Stampfer\nDesign:\nFrank Posthoff (A.NikoPol)\nProgramming:\nCamilla Lummerzheim\nJonas Gessner";
"sensorLinearAcceleration" = "Linear Acceleration";
"sensorLight" = "Light";
"sensorGyroscope" = "Gyroscope";
"sensorAccelerometer" = "Accelerometer";
"sensorMagneticField" = "Magnetic Field";
"sensorPressure" = "Pressure";
"sensorProximity" = "Proximity";
"location" = "Location";
"sensorNotAvailableWarningTitle" = "Sensor not available.";
"sensorNotAvailableWarningText1" = "The sensor";
"sensorNotAvailableWarningText2" = "is not available. Usually this means, that your device simply does not have this type of sensor.";
"sensorNotAvailableWarningMoreInfo" = "More info";
"sensorNotAvailableWarningMoreInfoURL" = "http://phyphox.org/faq/#faqMissingSensor";
"appleBanWarningMoreInfo" = "More info";
"appleBanWarningMoreInfoURL" = "http://phyphox.org/faq/#faqAppleBan";
"ok" = "OK";
"close" = "Close";
"next" = "Next";
"cancel" = "Cancel";
"unknown" = "unknown";
"delete" = "Delete";
"confirmDelete" = "Do you want to delete this experiment from your collection?";
"confirmDeleteTitle" = "Confirm delete?";
"stop" = "Stop";
"start" = "Start";
"clear_data" = "Clear data";
"clear_data_question" = "Clear recorded data?";
"clear" = "Clear";
"timed_stop" = "Stop timed run";
"timed_start" = "Start timed run";
"loadingTitle" = "Loading";
"loadingText" = "Loading experiment…";
"timedRunDialogTitle" = "Timed Run";
"timedRunStartDelay" = "Start delay (s)";
"timedRunStopDelay" = "Experiment duration (s)";
"enableTimedRun" = "Enable a timed run";
"disableTimedRun" = "Disable a timed run";
"export" = "Export Data";
"export_subject" = "Data from phyphox";
"export_pick_share" = "Pick an export method";
"share" = "Share screenshot";
"share_subject" = "Screenshot from phyphox";
"share_pick_share" = "Pick a share method";
"switch_to_calibrated_magnetometer" = "Switch to calibrated magnetometer";
"switch_to_raw_magnetometer" = "Switch to raw magnetometer";
"enableRemoteServer" = "Enable remote access";
"disableRemoteServer" = "Disable remote access";
"remoteServerWarning" = "You are about to enable remote access to the acquired data. You should only do so on a trusted network! Also note, that direct access between devices may not be possible on many corporate or university networks.\n\nFor best security and performance you should connect to this device via a tethering option (mobile hotspot).\n\nAfter pressing ok, you can access your measurement from any web browser on the same network.";
"remoteServerWarningTitle" = "Security warning!";
"remoteServerActive" = "Remote access enabled. Access this experiment from the following URL:";
"hotspotSettings" = "Hotspot Settings";
"switchToPhoneLayout" = "View: Narrow";
"switchColumns1" = "View: 1 column";
"switchColumns2" = "View: 2 columns";
"switchColumns3" = "View: 3 columns";
"show_description" = "Experiment info";
"save_locally" = "Add experiment to collection";
"save_locally_message" = "This experiment has been opened from a remote source. Do you want to add it to your experiment collection?";
"save_locally_button" = "Save to collection";
"save_locally_done" = "Experiment successfully added to collection.";
"save_state" = "Save experiment state";
"save_state_category" = "Saved experiment states";
"save_state_message" = "You can save the state of this experiment including your data to your collection or share it with a third-party app.";
"save_state_title" = "Title";
"save_state_save" = "To collection";
"save_state_share" = "Share";
"save_state_subject" = "Experiment state for phyphox";
"save_state_default_title" = "Measurement";
"save_state_success" = "State has been saved to your collection.";
"timedRun" = "Timed run";
"pick_exportSets" = "Pick the data sets to export.";
"pick_exportFormat" = "Choose the data format.";
"noDrawableData" = "No drawable data.";
"categoryNewExperiment" = "Simple custom experiments";
"categoryRawSensor" = "Raw Sensors";
"experimentinfo_hint" = "Check experiment info to learn how to use this experiment.";
"help" = "Help and info";
"experimentsPhyphoxOrg" = "Experiment ideas and instructions";
"experimentsPhyphoxOrgURL" = "http://phyphox.org/experiments";
"faqPhyphoxOrg" = "Frequently asked questions";
"faqPhyphoxOrgURL" = "http://phyphox.org/faq";
"remotePhyphoxOrg" = "Remote control help";
"remotePhyphoxOrgURL" = "http://phyphox.org/remote-control";
"AudioRateMissmatch" = "Error: Sampling rate mismatch. Please disable any apps or services (like AirPlay) which force a different audio sampling rate.";
"translationInfo" = "Languages";
"translationText" = "Phyphox will use the first language available from your preferred languages list in your system settings. To learn which languages are available and how you can help, select \"visit website\".";
"translationToWebsite" = "Visit website";
"translationToWebsiteURL" = "http://phyphox.org/languages#en";
