...
  Created by Sebastian Kuhlen on 28.05.16.
  Copyright © 2016 RWTH Aachen. All rights reserved.
*/

"apple_ban" = "This experiment is no longer available.";
"app_name" = "phyphox";
"actions" = "Actions";
"action_settings" = "Settings";
"title_activity_experiment" = "phyphox";
"newExperiment" = "Add experiment";
"newExperimentSimple" = "Add simple experiment";
"newExperimentPhyphoxInfo" = "Visit phyphox.org to create more advanced experiments including data analysis and share them with colleagues, students and friends.";
"newExperimentInputTitle" = "Title";
"newExperimentInputBufferSize" = "Buffer size (number of values to be stored)";
"newExperimentInputRate" = "Sensor rate (in Hz, 0 = as fast as possible)";
"newExperimentInputSensors" = "Active sensors";
"warning" = "Warning";
...
"appleBanWarningMoreInfo" = "More info";
"appleBanWarningMoreInfoURL" = "http://phyphox.org/faq/#faqAppleBan";
"ok" = "OK";
"accept" = "Accept";
"tryagain" = "Try again";
"doContinue" = "Continue";
"close" = "Close";
"next" = "Next";
"cancel" = "Cancel";
"unknown" = "unknown";
"rename" = "Rename";
"delete" = "Delete";
"select" = "--select--";
...
"switchToPhoneLayout" = "View: Narrow";
"switchColumns1" = "View: 1 column";
"switchColumns2" = "View: 2 columns";
"switchColumns3" = "View: 3 columns";
"toggleBrightMode" = "Bright mode";
"fontSize" = "Font size";
"show_description" = "Experiment info";
"save_locally" = "Add experiment to collection";
"save_locally_message" = "This experiment has been opened from a remote source. Do you want to add it to your experiment collection?";
"save_locally_button" = "Save to collection";
"save_locally_done" = "Experiment successfully added to collection.";
"save_state" = "Save experiment state";
"save_state_category" = "Saved experiment states";
...
"save_state_success" = "State has been saved to your collection.";
"timedRun" = "Timed run";
"pick_exportSets" = "Pick the data sets to export.";
"pick_exportFormat" = "Choose the data format.";
"noDrawableData" = "No drawable data.";
"categoryNewExperiment" = "Simple custom experiments";
"categoryRawSensor" = "Raw Sensors";
"categoryPhyphoxOrg" = "Contribute to phyphox";
"categoryPhyphoxOrgHint" = "There are new options to support phyphox at the bottom of the list.";
"experimentinfo_hint" = "Check experiment info to learn how to use this experiment.";
"start_hint" = "Touch the triangle to start the experiment.";
"help" = "Help and info";
"experimentsPhyphoxOrg" = "Experiment ideas and instructions";
...
